--- a/index.html
+++ b/index.html
@@ -16,6 +16,14 @@
       </ul>
     </nav>
     <main>
+        <section>
+            <h2>
+                Javascript Function
+            </h2>
+            <p>
+                The function of java script is to change colour of header when it is clicked.
+            </p>
+        </section>
       <section id="about">
         <h2>About</h2>
         <p>Learn more about our company and what we do.</p>
