--- a/sevices.html
+++ b/sevices.html
@@ -18,7 +18,7 @@
                     Present Services
                 </h2>
                 <p>
-                    This website is merely for testing purpose and do not provide any service.
+                    This website is merely for testing purpose and do not provide any services yet.
                 </p>
             </section>
             <section>
