--- a/sevices.html
+++ b/sevices.html
@@ -18,8 +18,13 @@
                     Present Services
                 </h2>
                 <p>
-                    This website is merely for testing purpose and do not provide any services yet.
+                    This website provides a use of infix expression calculator.
                 </p>
+                <a href="calculator.html"> Infix Calculator</a></a>
+                <p>
+                    This website also provides a postfix expression calculator.
+                </p>
+                <a href="postfix.html">Postfix Calculator</a></a>
             </section>
             <section>
                 <h2>
