--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <header>
-      <h1>The Website to get free code</h1>
+      <h1>This is my first web page</h1>
     </header>
     <nav>
       <ul>
@@ -16,22 +16,14 @@
       </ul>
     </nav>
     <main>
-        <section>
-            <h2>
-                Javascript Function
-            </h2>
-            <p>
-                The function of java script is to change colour of header when it is clicked.
-            </p>
-        </section>
       <section id="about">
         <h2>About</h2>
-        <p>Learn more about our company and what we do.</p>
+        <p>Learn more about our Website.</p>
         <a href="about.html">Learn More</a>
       </section>
       <section id="services">
         <h2>Services</h2>
-        <p>Discover the services we offer to help you succeed.</p>
+        <p>Discover the services we offer to help you.</p>
         <a href="sevices.html">Learn More</a></a>
       </section>
       <section id="contact">
