--- a/postfix.html
+++ b/postfix.html
@@ -9,7 +9,7 @@
       <section>
         <h1>Enter the expression to perform simple calculation</h1>
         <p>
-            Remember: Only single digit postfix expression without space is calculated only.
+            Reminder: Only single digit postfix expression without space is calculated only.
         </p>
         <form> 
           <input type="text" class="textbox" id="expression">
