--- a/calculator.html
+++ b/calculator.html
@@ -9,7 +9,7 @@
       <section>
         <h1>Enter the expression to perform simple calculation</h1>
         <p>
-          Remainder: Multiple digits can be solved for infix expression. 
+          Reminder: Multiple digits can be solved for infix expression. 
         </p>
         <form> 
           <input type="text" class="textbox" id="expression">
